button overflow fixed

--- a/styles.css
+++ b/styles.css
@@ -68,6 +68,16 @@ button{
     margin: 2px;
     box-shadow: 0px 8px 15px rgba(45, 74, 203, 0.3);
 }
+@media only screen and (max-width: 436px) {
+    button{
+        padding: 10px 10px;
+        font-size: 12px;
+        border-radius: 50%;
+    }
+    input{
+        width: 195px;
+    }
+  }
 .hover-effect,button:hover{
     transform: scale(.90); 
     transition: transform 0.5s ease-in-out; 
